Change Log: initial commit Enrolement des utilisateurs Liste des membre enrolé [ok]; Consultation des informations [ok]

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,5 @@
 btnEnregister = Enregistrer
+view_name_accueil = Accueil
+view_name_administration = Administration
+view_name_enrolement = Enrolement
+view_name_profil_utilisateur = Profil d'Utilisateur
